# fluffy-octo-robot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FEATURES.md  MANIFEST.in  MUSE_MIGRATION_MAP.md  README.md  UNUSED_CODE_AUDIT.md  build_extensions.py  codebase_bloat_analysis_report.md  codefixes copy.md  fixed_plan.md  fresh_bloat_audit_report.md  issuesclaude.md  manifest  phase2_diagnostic.py  plan.md  plan2.md  pre_refactor_hashes.txt  pyproject.toml  setup.py  trinityfindings.md  upgrades.md
.claude/: settings.json
.claude/hooks/: block-sed.py
.github/workflows/: ci.yml  nightly.yml  publish.yaml  publish.yml
.muse/agents/: code-critic.json
bd/: 000-roadmap.md  001-01-classifier.md  001-02-registry.md  001-03-dispatcher.md  001-04-hook-integration.md  001-05-cli-flags.md  001-epic-filter-engine.md  002-01-git-status.md  002-02-git-log.md  002-03-git-diff.md  002-04-git-mutations.md  002-epic-git-strategies.md  003-01-pytest.md  003-02-vitest-jest.md  003-03-cargo-rspec.md  003-epic-test-strategies.md  004-01-lint-grouping.md  004-02-grep-find.md  004-03-json-dual.md  004-epic-lint-strategies.md  005-01-code-filter.md  005-02-tree-compression.md  005-03-read-truncate.md  005-04-dedup-log.md  005-epic-code-strategies.md  006-01-sqlite-schema.md  006-02-tracking-insert.md  006-03-gain-report.md  006-04-session-report.md  006-epic-tracking.md  007-01-tee-recovery.md  007-02-config-system.md  007-03-init-command.md  007-04-docs-readme.md  007-epic-integration.md  008-01-shadow-git.md  008-02-conversation-snapshots.md  008-03-checkpoint-hook.md  008-04-restore-command.md  008-05-rewind-shortcut.md  (+115 more)
code_muse/: __init__.py  __main__.py  _fastjson.py  _models_config_utils.py  banner.py  callbacks.py  chatgpt_codex_client.py  claude_cache_client.py  config.py  config_agent.py  config_appearance.py  config_model.py  config_security.py  error_logging.py  gemini_code_assist.py  gemini_model.py  gemini_schema.py  gemini_streaming.py  gemini_utils.py  http_utils.py  interpreter_pool.py  keymap.py  list_filtering.py  list_filtering.pyx  main.py  model_factory.py  model_factory_settings.py  model_switching.py  model_utils.py  models.json  models_dev_parser.py  motion.py  provider_identity.py  pydantic_patches.py  reopenable_async_client.py  round_robin_model.py  secret_storage.py  session_storage.py  session_storage_helpers.py  status_display.py  (+6 more)
code_muse/agents/: __init__.py  _builder.py  _compaction.py  _diagnostics.py  _history.py  _key_listeners.py  _non_streaming_render.py  _run_signals.py  _run_utils.py  _runtime.py  _streaming_retry.py  _tool_circuit_breaker.py  agent_creator_agent.py  agent_helios.py  agent_manager.py  agent_muse.py  agent_planning.py  agent_qa_iris.py  agent_qa_melpomene.py  base_agent.py  critic_heavy_agent.py  critic_light_agent.py  event_stream_handler.py  json_agent.py  prompt_v3.py  prompts.py  subagent_stream_handler.py
code_muse/cli_runner/: __init__.py  args.py  input_disposition.py  loop.py  resume.py  runner.py  terminal_session.py
code_muse/command_line/: __init__.py  add_model_menu.py  agent_menu.py  attachments.py  autosave_menu.py  clipboard.py  colors_menu.py  command_handler.py  command_registry.py  config_commands.py  core_commands.py  diff_menu.py  file_path_completion.py  load_context_completion.py  model_picker_completion.py  model_settings_menu.py  onboarding_slides.py  onboarding_wizard.py  pagination.py  pin_command_completion.py  prompt_toolkit_completion.py  session_commands.py  shell_passthrough.py  skills_completion.py  types.py  uc_menu.py  utils.py  wiggum_state.py
code_muse/config/: __init__.py  _dynamic_cap.py  models.py  parser.py  paths.py  security.py  session.py
code_muse/evals/: __init__.py  eval_helpers.py  eval_runner.py
code_muse/fs_scan_cache/: __init__.py  invalidation_hooks.py  scan_cache_core.c  scan_cache_core.pyx  tool_integration.py  ttl_policy.py
code_muse/hook_engine/: README.md  __init__.py  aliases.py  engine.py  executor.py  matcher.py  models.py  registry.py  trust.py  validator.py
code_muse/messaging/: __init__.py  bus.py  commands.py  message_queue.py  messages.py  queue_console.py  renderers.py  rich_renderer.py  shimmer.py  subagent_console.py
code_muse/model_factory/: __init__.py  _compat_model.py  _config_loader.py  _custom_config.py  _model_builders.py  _plugin_registry.py
code_muse/models_cache/: __init__.py  blocking_lru_cache.py  cache_writer.py  sha256_hash.c  sha256_hash.pyx  startup_integration.py
code_muse/plugins/: __init__.py  global_state_audit.py  oauth_muse_html.py
code_muse/security/: __init__.py  redaction.c  redaction.py  redaction.pyx
docs/: AGENT_SKILLS.md  HOOKS.md  MIND_PACK.md  RELEASING.md  SECURITY.md  SUBINTERPRETERS.md  TESTING.md
findings/: fixed_plan copy.md  fixed_plan.md  geminiflash.md  glm5.1.md  hyfindings.md  kimifindings.md  kirofindings.md  seedance.md
scripts/: context_audit_simulation.py  prepare_release.py
tests/: conftest.py  reset_global_state.py  test_agent_creator_full_coverage.py  test_agent_pinned_models.py  test_agent_refresh.py  test_agent_tools.py  test_agent_tools_coverage.py  test_agent_tools_full_coverage.py  test_agents_gaps.py  test_ask_user_question.py  test_auto_save_session.py  test_callback_extensions.py  test_callbacks_extended.py  test_chatgpt_codex_client.py  test_claude_cache_client.py  test_claude_cache_client_full_coverage.py  test_claude_oauth_reauth_retry.py  test_cli_runner.py  test_cli_runner_coverage.py  test_cli_runner_full_coverage.py  test_command_cache.py  test_command_handler.py  test_command_line_attachments.py  test_command_line_utils.py  test_command_registry.py  test_compaction_cache.py  test_compaction_mocked.py  test_compaction_strategy.py  test_config.py  test_config_and_storage_edge_cases.py  test_config_extended_part1.py  test_config_extended_part2.py  test_config_full_coverage.py  test_coverage_agents_gaps.py  test_crof_tool_result_compat.py  test_edit_file_expansion.py  test_error_logging.py  test_file_modification_auxiliary.py  test_file_permissions.py  test_fuzzy_replacement_limits.py  (+67 more)
(+665 files in other folders)
