[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-muse"
version = "0.1.13"
description = "Muse — eternal guide of creators in the arts and sciences. An elegant AI coding assistant."
readme = "README.md"
requires-python = ">=3.14,<3.16"
dependencies = [
    "pydantic-ai-slim[openai,anthropic]>=1.93.0",
    "typer>=0.25.1",
    "httpx[http2]>=0.28.1",
    "aiofiles>=24.1.0",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "prompt-toolkit>=3.0.52",
    "json-repair>=0.59.6",
    "mitmproxy>=11.0.0",
    "pyfiglet>=1.0.4",
    "rapidfuzz>=3.14.5",
    "openai>=2.36.0",
    "ripgrep>=14.1.0,<16",
    "playwright>=1.59.0",
    "termflow-md>=0.1.11",
    "Pillow>=12.2.0",
    "azure-identity>=1.25.3",
    "anthropic>=0.100.0,<1",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "websockets>=15.0",
    "cython>=3.2.4",
    "setuptools>=82.0.1",
]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "pexpect>=4.9.0",
    "mypy>=1.16.0",
]
authors = [
    {name = "Michael Pfaffenberger"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]

[project.urls]
Repository = "https://github.com/asx8678/muse"
Homepage = "https://github.com/asx8678/muse"


[project.scripts]
muse = "code_muse.main:main_entry"
# muse = "code_muse.main:main_entry" (duplicate — already defined above)
# (legacy alias removed)

[tool.logfire]
ignore_no_config = true

[tool.hatch.build]
packages = ["code_muse"]

[tool.hatch.build.targets.wheel.shared-data]
"code_muse/models.json" = "code_muse/models.json"
"code_muse/models_dev_api.json" = "code_muse/models_dev_api.json"

[[tool.hatch.build.targets.sdist.include]]
path = "code_muse/models.json"

[[tool.hatch.build.targets.sdist.include]]
path = "code_muse/models_dev_api.json"
[tool.ruff]
target-version = "py313"
exclude = ["*.pyx"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"code_muse/main.py" = ["E402"]
"code_muse/cli_runner.py" = ["E402"]
"code_muse/messaging/__init__.py" = ["E402"]
"code_muse/plugins/mindpack/orchestration.py" = ["E402"]
"code_muse/tools/chrome_cdp/*.py" = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["code_muse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests skipped in normal PR unit runs",
    "security: security regression tests",
    "slow: slow tests reserved for nightly or explicit runs",
    "serial: tests that cannot safely run with pytest-xdist",
]

[tool.coverage.run]
omit = ["code_muse/main.py"]

[tool.uv]
python-preference = "system"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "pexpect>=4.9.0",
    "mypy>=1.16.0",
]
